[Feature #21157] Comparison operator `<>`

--- a/prism/templates/src/token_type.c.erb
+++ b/prism/templates/src/token_type.c.erb
@@ -257,6 +257,8 @@ pm_token_type_human(pm_token_type_t token_type) {
             return "'<='";
         case PM_TOKEN_LESS_EQUAL_GREATER:
             return "'<=>'";
+        case PM_TOKEN_LESS_GREATER:
+            return "'<>'";
         case PM_TOKEN_LESS_LESS:
             return "<<";
         case PM_TOKEN_LESS_LESS_EQUAL:
